--- a/app/src/main/res/layout/fragment_recruitmentfragment.xml
+++ b/app/src/main/res/layout/fragment_recruitmentfragment.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".recruitmentfragment">
+    tools:context=".recruitmentfragment"
+    android:background="#fff">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
