--- a/app/src/main/res/layout/activity_recruitment_home.xml
+++ b/app/src/main/res/layout/activity_recruitment_home.xml
@@ -29,7 +29,7 @@
             android:layout_marginStart="25dp"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="45dp"
-            android:fontFamily="@font/robotobold"
+            android:fontFamily="@font/helveticaneu_bold"
             android:text="Interview."
             android:textColor="#000"
             android:textSize="45dp"
@@ -42,10 +42,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:layout_marginLeft="25dp"
-            android:fontFamily="@font/robotoregular"
+            android:fontFamily="@font/helveticaneue_regular"
             android:text="Like never before"
             android:textColor="#000"
             android:textSize="45dp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -59,7 +60,7 @@
             android:layout_marginEnd="25dp"
             android:layout_marginRight="25dp"
             android:background="@drawable/ic_signup"
-            android:fontFamily="@font/robotomedium"
+            android:fontFamily="@font/helveticaneue_medium"
             android:text="Signup"
             android:textAllCaps="false"
             android:textColor="#fff"
@@ -76,7 +77,7 @@
             android:layout_marginLeft="25dp"
             android:layout_marginTop="50dp"
             android:background="@drawable/loginback"
-            android:fontFamily="@font/robotomedium"
+            android:fontFamily="@font/helveticaneue_medium"
             android:text="Login"
             android:textAllCaps="false"
             android:textColor="#FF6200"
