--- a/app/src/main/res/layout/activity_recruitment_login.xml
+++ b/app/src/main/res/layout/activity_recruitment_login.xml
@@ -22,12 +22,13 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:fontFamily="@font/robotobold"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:fontFamily="@font/helveticaneue_medium"
         android:text="Welcome "
         android:textColor="#000"
         android:textSize="45dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
 
@@ -35,12 +36,13 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:fontFamily="@font/robotobold"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:fontFamily="@font/helveticaneue_medium"
         android:text="Back!"
         android:textColor="#000"
         android:textSize="45dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -49,16 +51,18 @@
         android:layout_width="match_parent"
         android:layout_height="53dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
         android:background="@drawable/signupedittext"
-        android:paddingLeft="20dp"
         android:ems="10"
+        android:fontFamily="@font/helveticaneue_regular"
         android:hint="VIT Registration Number"
-        android:textColorHint="#707070"
         android:inputType="textPersonName"
+        android:paddingLeft="20dp"
+        android:textColor="#000"
+        android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,10 +79,11 @@
         android:layout_marginRight="20dp"
         android:background="@drawable/signupedittext"
         android:ems="10"
+        android:fontFamily="@font/helveticaneue_regular"
         android:hint="Password"
-        android:textColorHint="#707070"
         android:inputType="textPassword"
         android:paddingLeft="20dp"
+        android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,11 +99,12 @@
         android:layout_marginEnd="124dp"
         android:layout_marginRight="124dp"
         android:background="@drawable/loginback"
-        android:fontFamily="@font/robotomedium"
+        android:fontFamily="@font/helveticaneue_medium"
         android:text="Login"
         android:textAllCaps="false"
         android:textColor="#FF6200"
         android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupPassword" />
