--- a/app/src/main/res/layout/activity_recruitment_quiz.xml
+++ b/app/src/main/res/layout/activity_recruitment_quiz.xml
@@ -16,10 +16,10 @@
         android:layout_marginTop="42dp"
         android:layout_marginEnd="112dp"
         android:layout_marginRight="112dp"
-        android:fontFamily="@font/robotomedium"
+        android:fontFamily="@font/helveticaneu_bold"
         android:text="Technical Round"
         android:textColor="#0C233C"
-        android:textSize="25dp"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,13 +28,13 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
-        android:layout_marginLeft="140dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginLeft="128dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/robotoregular"
+        android:fontFamily="@font/helveticaneue_medium"
         android:text="Question"
         android:textColor="#FF6200"
-        android:textSize="15dp"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -44,11 +44,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginLeft="3dp"
-        android:layout_marginTop="9dp"
-        android:fontFamily="@font/robotomedium"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/helveticaneue_medium"
         android:text="1/10"
         android:textColor="#ff6200"
-        android:textSize="15dp"
+        android:textSize="20dp"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -61,10 +61,11 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:fontFamily="@font/robotobold"
+        android:fontFamily="@font/helveticaneue_medium"
         android:text="What data type is the object below ? L = [1, 23, ‘hello’, 1]"
         android:textColor="#395AFF"
-        android:textSize="14dp"
+        android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
@@ -85,6 +86,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView8">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/quizcardback">
@@ -95,11 +97,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="30dp"
-                android:fontFamily="@font/robotobold"
+                android:fontFamily="@font/helveticaneu_bold"
                 android:text="List"
                 android:textColor="#707070"
                 android:textSize="20dp"
@@ -125,6 +127,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cardOption1">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/quizselectedback">
@@ -135,11 +138,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="30dp"
-                android:fontFamily="@font/robotobold"
+                android:fontFamily="@font/helveticaneu_bold"
                 android:text="Dictionary"
                 android:textColor="#707070"
                 android:textSize="20dp"
@@ -165,6 +168,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cardOption2">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/quizcardback">
@@ -175,11 +179,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="30dp"
-                android:fontFamily="@font/robotobold"
+                android:fontFamily="@font/helveticaneu_bold"
                 android:text="Tuple"
                 android:textColor="#707070"
                 android:textSize="20dp"
@@ -205,6 +209,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cardOption3">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/quizcardback">
@@ -215,11 +220,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="30dp"
-                android:fontFamily="@font/robotobold"
+                android:fontFamily="@font/helveticaneu_bold"
                 android:text="Array"
                 android:textColor="#707070"
                 android:textSize="20dp"
@@ -241,7 +246,7 @@
         android:layout_marginEnd="149dp"
         android:layout_marginRight="149dp"
         android:background="@drawable/quiznext"
-        android:fontFamily="@font/robotobold"
+        android:fontFamily="@font/helveticaneue_medium"
         android:text="Next"
         android:textAllCaps="false"
         android:textColor="#4766FF"
