--- a/app/src/main/res/layout/activity_recruitment_signup.xml
+++ b/app/src/main/res/layout/activity_recruitment_signup.xml
@@ -15,10 +15,10 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="48dp"
-        android:fontFamily="@font/robotomedium"
+        android:fontFamily="@font/helveticaneu_bold"
         android:text="Welcome!"
         android:textColor="#000"
-        android:textSize="40dp"
+        android:textSize="45dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,7 +28,8 @@
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/helveticaneue_regular"
         android:text="Please provide the following details for signup"
         android:textColor="#707070"
         android:textSize="20dp"
@@ -44,12 +45,13 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:ems="10"
-        android:hint="Full name"
-        android:textColorHint="#707070"
-        android:inputType="textPersonName"
         android:background="@drawable/signupedittext"
+        android:ems="10"
+        android:fontFamily="@font/helveticaneue_regular"
+        android:hint="Full name"
+        android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -63,11 +65,13 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
+        android:background="@drawable/signupedittext"
         android:ems="10"
+        android:fontFamily="@font/helveticaneue_regular"
         android:hint="VIT Registration Number"
         android:inputType="textPersonName"
-        android:background="@drawable/signupedittext"
         android:paddingLeft="20dp"
+        android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupName" />
@@ -81,11 +85,13 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:ems="10"
-        android:hint="Email ID"
         android:background="@drawable/signupedittext"
-        android:paddingLeft="20dp"
+        android:ems="10"
+        android:fontFamily="@font/helveticaneue_regular"
+        android:hint="Email ID"
         android:inputType="textPersonName"
+        android:paddingLeft="20dp"
+        android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupRegNo" />
@@ -99,11 +105,13 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
+        android:background="@drawable/signupedittext"
         android:ems="10"
+        android:fontFamily="@font/helveticaneue_regular"
         android:hint="Phone Number"
         android:inputType="textPersonName"
-        android:background="@drawable/signupedittext"
         android:paddingLeft="20dp"
+        android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupEmailid" />
@@ -117,11 +125,13 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:ems="10"
-        android:hint="Github Profile Link"
         android:background="@drawable/signupedittext"
-        android:paddingLeft="20dp"
+        android:ems="10"
+        android:fontFamily="@font/helveticaneue_regular"
+        android:hint="Github Profile Link"
         android:inputType="textPersonName"
+        android:paddingLeft="20dp"
+        android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupPhoneNumber" />
@@ -135,11 +145,13 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:ems="10"
-        android:hint="Password"
         android:background="@drawable/signupedittext"
-        android:paddingLeft="20dp"
+        android:ems="10"
+        android:fontFamily="@font/helveticaneue_regular"
+        android:hint="Password"
         android:inputType="textPassword"
+        android:paddingLeft="20dp"
+        android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupGithub" />
@@ -150,11 +162,11 @@
         android:layout_height="53dp"
         android:layout_marginStart="123dp"
         android:layout_marginLeft="123dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="124dp"
         android:layout_marginRight="124dp"
         android:background="@drawable/loginback"
-        android:fontFamily="@font/robotoregular"
+        android:fontFamily="@font/helveticaneue_medium"
         android:text="Continue"
         android:textAllCaps="false"
         android:textColor="#FF6200"
