--- a/app/src/main/res/layout/activity_recruitment_login.xml
+++ b/app/src/main/res/layout/activity_recruitment_login.xml
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
-        android:id="@+id/signupRegNo"
+        android:id="@+id/loginRegNo"
         android:layout_width="match_parent"
         android:layout_height="53dp"
         android:layout_marginStart="20dp"
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <EditText
-        android:id="@+id/signupPassword"
+        android:id="@+id/loginPassword"
         android:layout_width="match_parent"
         android:layout_height="53dp"
         android:layout_marginStart="20dp"
@@ -87,7 +87,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupRegNo" />
+        app:layout_constraintTop_toBottomOf="@+id/loginRegNo" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonLogin"
@@ -107,5 +107,5 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />
 </androidx.constraintlayout.widget.ConstraintLayout>
