--- a/app/src/main/res/layout/activity_recruitment_signup.xml
+++ b/app/src/main/res/layout/activity_recruitment_signup.xml
@@ -51,6 +51,7 @@
         android:hint="Full name"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,6 +72,7 @@
         android:hint="VIT Registration Number"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,6 +93,7 @@
         android:hint="Email ID"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,8 +112,9 @@
         android:ems="10"
         android:fontFamily="@font/helveticaneue_regular"
         android:hint="Phone Number"
-        android:inputType="textPersonName"
+        android:inputType="phone"
         android:paddingLeft="20dp"
+        android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -131,6 +135,7 @@
         android:hint="Github Profile Link"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -151,6 +156,7 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:paddingLeft="20dp"
+        android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
