--- a/app/src/main/res/layout/fragment_recruitmentfragment.xml
+++ b/app/src/main/res/layout/fragment_recruitmentfragment.xml
@@ -9,7 +9,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#fff">
 
         <TextView
             android:id="@+id/textView10"
@@ -25,99 +26,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/textView18"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginRight="30dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView10">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="74dp">
-
-                <TextView
-                    android:id="@+id/textView12"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="13dp"
-                    android:fontFamily="@font/helveticaneue_medium"
-                    android:text="Recruitment Quiz"
-                    android:textColor="#000"
-                    android:textSize="14dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:layout_editor_absoluteX="182dp" />
-
-                <TextView
-                    android:id="@+id/textView13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/helveticaheue_thin"
-                    android:text="NOV"
-                    android:textColor="#000"
-                    android:textSize="12dp"
-                    android:textStyle="bold"
-                    tools:layout_editor_absoluteX="33dp"
-                    tools:layout_editor_absoluteY="43dp" />
-
-                <TextView
-                    android:id="@+id/textView14"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:fontFamily="@font/helveticaneue_regular"
-                    android:text="Anna Auditorium"
-                    android:textAllCaps="false"
-                    android:textColor="#000"
-                    android:textSize="11dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView12"
-                    tools:layout_editor_absoluteX="182dp" />
-
-                <TextView
-                    android:id="@+id/textView15"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:layout_marginBottom="13dp"
-                    android:fontFamily="@font/helveticaneue"
-                    android:text="11:30 AM"
-                    android:textColor="#000"
-                    android:textSize="9dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView14"
-                    tools:layout_editor_absoluteX="203dp" />
-
-                <TextView
-                    android:id="@+id/textView16"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:layout_marginBottom="13dp"
-                    android:fontFamily="@font/helveticaneue_regular"
-                    android:text="Time:"
-                    android:textColor="#000"
-                    android:textSize="9dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView14"
-                    tools:layout_editor_absoluteX="182dp" />
-
-                <TextView
-                    android:id="@+id/textView17"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/helveticaneue_regular"
-                    android:text="27"
-                    android:textColor="#000"
-                    android:textSize="25dp"
-                    tools:layout_editor_absoluteX="33dp"
-                    tools:layout_editor_absoluteY="13dp" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+            android:fontFamily="@font/helveticaneue_medium"
+            android:text="Choose your domain for quiz"
+            android:textColor="#395AFF"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="25dp"
+            tools:layout_editor_absoluteY="111dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
