--- a/app/src/main/res/layout/activity_recruitment_quiz.xml
+++ b/app/src/main/res/layout/activity_recruitment_quiz.xml
@@ -238,15 +238,17 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button"
-        android:layout_width="113dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="149dp"
-        android:layout_marginLeft="149dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:layout_marginEnd="149dp"
-        android:layout_marginRight="149dp"
+        android:layout_marginBottom="30dp"
+        android:paddingLeft="45dp"
+        android:paddingTop="10dp"
+        android:paddingRight="45dp"
+        android:paddingBottom="10dp"
         android:background="@drawable/quiznext"
         android:fontFamily="@font/helveticaneue_medium"
+        android:foreground="?android:attr/selectableItemBackground"
         android:text="Next"
         android:textAllCaps="false"
         android:textColor="#4766FF"
