--- a/app/src/main/res/layout/activity_recruitment_signup.xml
+++ b/app/src/main/res/layout/activity_recruitment_signup.xml
@@ -18,17 +18,17 @@
         android:fontFamily="@font/helveticaneu_bold"
         android:text="Welcome!"
         android:textColor="#000"
-        android:textSize="45dp"
+        android:textSize="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="280dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/helveticaneue_regular"
         android:text="Please provide the following details for signup"
         android:textColor="#707070"
@@ -39,18 +39,17 @@
     <EditText
         android:id="@+id/signupName"
         android:layout_width="match_parent"
-        android:layout_height="53dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:background="@drawable/signupedittext"
-        android:ems="10"
         android:fontFamily="@font/helveticaneue_regular"
         android:hint="Full name"
         android:inputType="textPersonName"
-        android:paddingLeft="20dp"
         android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,18 +59,17 @@
     <EditText
         android:id="@+id/signupRegNo"
         android:layout_width="match_parent"
-        android:layout_height="53dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:background="@drawable/signupedittext"
-        android:ems="10"
         android:fontFamily="@font/helveticaneue_regular"
         android:hint="VIT Registration Number"
         android:inputType="textPersonName"
-        android:paddingLeft="20dp"
         android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,18 +79,17 @@
     <EditText
         android:id="@+id/signupEmailid"
         android:layout_width="match_parent"
-        android:layout_height="53dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:background="@drawable/signupedittext"
-        android:ems="10"
         android:fontFamily="@font/helveticaneue_regular"
         android:hint="Email ID"
         android:inputType="textPersonName"
-        android:paddingLeft="20dp"
         android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,18 +99,17 @@
     <EditText
         android:id="@+id/signupPhoneNumber"
         android:layout_width="match_parent"
-        android:layout_height="53dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:background="@drawable/signupedittext"
-        android:ems="10"
         android:fontFamily="@font/helveticaneue_regular"
         android:hint="Phone Number"
         android:inputType="phone"
-        android:paddingLeft="20dp"
         android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,18 +119,17 @@
     <EditText
         android:id="@+id/signupGithub"
         android:layout_width="match_parent"
-        android:layout_height="53dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:background="@drawable/signupedittext"
-        android:ems="10"
         android:fontFamily="@font/helveticaneue_regular"
         android:hint="Github Profile Link"
         android:inputType="textPersonName"
-        android:paddingLeft="20dp"
         android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
@@ -144,41 +139,42 @@
     <EditText
         android:id="@+id/signupPassword"
         android:layout_width="match_parent"
-        android:layout_height="53dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:background="@drawable/signupedittext"
-        android:ems="10"
         android:fontFamily="@font/helveticaneue_regular"
         android:hint="Password"
         android:inputType="textPassword"
-        android:paddingLeft="20dp"
         android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupGithub" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <Button
         android:id="@+id/buttonSignupContinue"
-        android:layout_width="164dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="123dp"
-        android:layout_marginLeft="123dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="124dp"
-        android:layout_marginRight="124dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/loginback"
         android:fontFamily="@font/helveticaneue_medium"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:paddingLeft="30dp"
+        android:paddingTop="10dp"
+        android:paddingRight="30dp"
+        android:paddingBottom="10dp"
         android:text="Continue"
         android:textAllCaps="false"
         android:textColor="#FF6200"
         android:textSize="20dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupPassword" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
