--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -51,6 +51,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="invisible"
+        android:layout_marginBottom="55dp"
+        android:layout_marginTop="25dp"
         app:layout_constraintBottom_toTopOf="@+id/nextBtnLanding"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -99,6 +101,8 @@
         android:id="@+id/landingTab2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="55dp"
+        android:layout_marginTop="25dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/nextBtnLanding"
         app:layout_constraintRight_toRightOf="parent"
@@ -146,8 +150,12 @@
 
     <Button
         android:id="@+id/nextBtnLanding"
-        android:layout_width="112dp"
-        android:layout_height="45dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="55dp"
+        android:paddingTop="10dp"
+        android:paddingRight="55dp"
+        android:paddingBottom="10dp"
         android:background="@drawable/landingnextlbtnbg"
         android:layout_marginBottom="72dp"
         android:text="next"
