--- a/app/src/main/res/layout/activity_recruitment_login.xml
+++ b/app/src/main/res/layout/activity_recruitment_login.xml
@@ -11,7 +11,7 @@
     <View
         android:id="@+id/view"
         android:layout_width="350dp"
-        android:layout_height="370dp"
+        android:layout_height="350dp"
         android:background="@drawable/adg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -27,7 +27,7 @@
         android:fontFamily="@font/helveticaneue_medium"
         android:text="Welcome "
         android:textColor="#000"
-        android:textSize="45dp"
+        android:textSize="35dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
@@ -41,7 +41,7 @@
         android:fontFamily="@font/helveticaneue_medium"
         android:text="Back!"
         android:textColor="#000"
-        android:textSize="45dp"
+        android:textSize="35dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -49,18 +49,17 @@
     <EditText
         android:id="@+id/loginRegNo"
         android:layout_width="match_parent"
-        android:layout_height="53dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:background="@drawable/signupedittext"
-        android:ems="10"
         android:fontFamily="@font/helveticaneue_regular"
         android:hint="VIT Registration Number"
         android:inputType="textPersonName"
-        android:paddingLeft="20dp"
         android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,41 +70,42 @@
     <EditText
         android:id="@+id/loginPassword"
         android:layout_width="match_parent"
-        android:layout_height="53dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:background="@drawable/signupedittext"
-        android:ems="10"
         android:fontFamily="@font/helveticaneue_regular"
         android:hint="Password"
         android:inputType="textPassword"
-        android:paddingLeft="20dp"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginRegNo" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <Button
         android:id="@+id/buttonLogin"
-        android:layout_width="164dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="123dp"
-        android:layout_marginLeft="123dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="124dp"
-        android:layout_marginRight="124dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/loginback"
         android:fontFamily="@font/helveticaneue_medium"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:paddingLeft="65dp"
+        android:paddingTop="10dp"
+        android:paddingRight="65dp"
+        android:paddingBottom="10dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="40dp"
         android:text="Login"
         android:textAllCaps="false"
         android:textColor="#FF6200"
         android:textSize="20dp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
