--- a/app/src/main/res/layout/fragment_recruitmentfragment.xml
+++ b/app/src/main/res/layout/fragment_recruitmentfragment.xml
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="25dp"
                 android:layout_marginLeft="25dp"
-                android:layout_marginTop="33dp"
+                android:layout_marginTop="20dp"
                 android:fontFamily="@font/helveticaneue_medium"
                 android:text="Choose your domain for quiz"
                 android:textColor="#395AFF"
@@ -51,20 +51,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginLeft="30dp"
-                android:layout_marginTop="47dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginRight="30dp"
-                app:cardCornerRadius="5dp"
                 app:cardBackgroundColor="#fff"
+                app:cardCornerRadius="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView18">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/clTechnical"
-                    android:background="#fff"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="#fff">
 
                     <ImageView
                         android:id="@+id/imageViewTechnical"
