--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -4,37 +4,65 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".recruitment_signup"
-    android:background="#fff">
+    tools:context=".editProfileFragment"
+    android:background="@color/white">
 
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/editProfileHead"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/helveticaneu_bold"
-        android:text="Welcome!"
-        android:textColor="#000"
+        android:text="Edit Profile"
+        android:textColor="#000000"
         android:textSize="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+    <Button
+        android:id="@+id/editProfilebackBtn"
+        android:layout_width="60dp"
+        android:layout_height="25dp"
+        android:text="back"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:fontFamily="@font/robotoregular"
+        android:background="@drawable/backbgeditpro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/helveticaneue_regular"
-        android:text="Please provide the following details for signup"
-        android:textColor="#707070"
-        android:textSize="20dp"
+        />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_image"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_margin="50dp"
+        android:src="@drawable/profile"
+        app:civ_border_color="#FF000000"
+        app:civ_border_width="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@id/editProfileHead" />
+
+    <Button
+        android:id="@+id/editpicbtn"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="120dp"
+        android:background="@drawable/editpicbg"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:paddingLeft="3dp"
+        android:drawableLeft="@drawable/edit"
+        app:layout_constraintStart_toEndOf="@id/profile_image"
+        app:layout_constraintTop_toBottomOf="@id/editProfileHead"
+        />
+
+
 
     <EditText
         android:id="@+id/editProfileName"
@@ -54,14 +82,14 @@
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
     <EditText
         android:id="@+id/editProfileRegNo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:paddingLeft="20dp"
         android:paddingTop="15dp"
@@ -81,7 +109,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:paddingLeft="20dp"
         android:paddingTop="15dp"
@@ -101,7 +129,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:paddingLeft="20dp"
         android:paddingTop="15dp"
@@ -121,60 +149,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
-        android:paddingLeft="20dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
         android:background="@drawable/signupedittext"
         android:fontFamily="@font/helveticaneue_regular"
         android:hint="Github Profile Link"
         android:inputType="textPersonName"
+        android:paddingLeft="20dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editProfilePhoneNumber" />
 
-    <EditText
-        android:id="@+id/signupPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:paddingLeft="20dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:background="@drawable/signupedittext"
-        android:fontFamily="@font/helveticaneue_regular"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:textColor="#000"
-        android:textColorHint="#707070"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editProfileGithub" />
 
     <Button
-        android:id="@+id/buttonSignupContinue"
+        android:id="@+id/SaveEditedProf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/loginback"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/editsavebtnbg"
         android:fontFamily="@font/helveticaneue_medium"
         android:foreground="?android:attr/selectableItemBackground"
         android:paddingLeft="30dp"
         android:paddingTop="10dp"
         android:paddingRight="30dp"
         android:paddingBottom="10dp"
-        android:text="Continue"
+        android:text="Save Changes"
         android:textAllCaps="false"
-        android:textColor="#FF6200"
-        android:textSize="20dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="30dp"
+        android:textColor="@color/white"
+        android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editProfileGithub" />
 </androidx.constraintlayout.widget.ConstraintLayout>
