--- a/app/src/main/res/layout/fragment_recruitmentfragment.xml
+++ b/app/src/main/res/layout/fragment_recruitmentfragment.xml
@@ -21,7 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="25dp"
-                android:layout_marginLeft="25dp"
+                android:layout_marginEnd="25dp"
                 android:layout_marginTop="30dp"
                 android:fontFamily="@font/helveticaneu_bold"
                 android:text="Recruitment"
