--- a/app/src/main/res/layout/fragment_settings_fragment.xml
+++ b/app/src/main/res/layout/fragment_settings_fragment.xml
@@ -1,15 +1,207 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:padding="5dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".settings_fragment"
-    android:background="#fff">
-
-    <!-- TODO: Update blank fragment layout -->
+    android:background="#ffffff"
+    >
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="settings" />
+        android:id="@+id/settingsHead"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Settings"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/helveticaneu_bold"
+        android:textColor="#000000"
+        android:textSize="40dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
-</FrameLayout>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/profileCard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        app:cardCornerRadius="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/settingsHead"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#f2f2f2"
+            android:padding="20dp"
+            >
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/profile"
+                app:civ_border_color="#FF000000"
+                app:civ_border_width="4dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/editProfileBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:textAllCaps="false"
+                android:textSize="12sp"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:fontFamily="@font/robotoregular"
+                android:text="Edit Profile"
+                android:textColor="#000000"
+                android:background="@drawable/editprofilebtnbg"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+               />
+
+            <TextView
+                android:id="@+id/profileName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp"
+                android:text="Arupam Kumar Saha"
+                android:textColor="#000000"
+                android:textSize="16dp"
+                android:fontFamily="@font/helveticaneu_bold"
+                app:layout_constraintTop_toBottomOf="@+id/profile_image"
+                app:layout_constraintStart_toStartOf="parent"
+
+                />
+
+            <TextView
+                android:id="@+id/profileEmail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                android:fontFamily="@font/robotolight"
+                android:text="arupamkumar.saha2019@vitstudent.ac.in"
+                android:textColor="#000000"
+                android:textSize="14dp"
+                app:layout_constraintStart_toStartOf="parent"
+
+                app:layout_constraintTop_toBottomOf="@+id/profileName" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/feedbackBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_feedback"
+        android:text="    Send Feedback"
+        android:textColor="#000000"
+        android:padding="15dp"
+        android:textSize="12sp"
+        android:textAlignment="textStart"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:background="@drawable/buttonbgsettings"
+        android:fontFamily="@font/robotoregular"
+        android:textAllCaps="false"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/profileCard"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_gravity="start"
+         />
+
+    <Button
+        android:id="@+id/bugReportBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="    Bug Report"
+        android:drawableLeft="@drawable/bugreport"
+        android:textColor="#000000"
+        android:textSize="12sp"
+        android:paddingLeft="15dp"
+        android:textAlignment="viewStart"
+        android:background="@drawable/buttonbgsettings"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:fontFamily="@font/robotoregular"
+        android:textAllCaps="false"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/feedbackBtn"
+        android:layout_gravity="start" />
+
+    <Button
+        android:id="@+id/aboutUsBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/aboutus"
+        android:text="    About Us"
+        android:textColor="#000000"
+        android:textSize="12sp"
+        android:paddingLeft="15dp"
+        android:textAlignment="viewStart"
+        android:background="@drawable/buttonbgsettings"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:fontFamily="@font/robotoregular"
+        android:textAllCaps="false"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/bugReportBtn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_gravity="start" />
+
+    <Button
+        android:id="@+id/ReferBtn"
+        android:drawableLeft="@drawable/referafrnd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="    Refer a friend"
+        android:textColor="#000000"
+        android:textSize="12sp"
+        android:paddingLeft="15dp"
+        android:textAlignment="viewStart"
+        android:background="@drawable/buttonbgsettings"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:fontFamily="@font/robotoregular"
+        android:textAllCaps="false"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/aboutUsBtn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_gravity="start" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Developed by ADG"
+        android:textSize="12sp"
+        android:layout_marginBottom="3dp"
+        android:textColor="#000000"
+        android:fontFamily="@font/robotolight"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
